k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retailpulse-api
  namespace: retailpulse
  labels:
    app: retailpulse-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retailpulse-api
  template:
    metadata:
      labels:
        app: retailpulse-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: api
          image: rohitvadhiya3736/retailpulse:latest
          imagePullPolicy: IfNotPresent
          args: ["api"]
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: artifacts
              mountPath: /app/artifacts
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: retailpulse-data
        - name: artifacts
          persistentVolumeClaim:
            claimName: retailpulse-artifacts
