k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-dashboard
  namespace: retailpulse
  labels:
    app: retailpulse-dashboard
spec:
  selector:
    app: retailpulse-dashboard
  ports:
    - name: streamlit
      port: 8501
      targetPort: 8501
  type: ClusterIP
