k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-grafana
  namespace: retailpulse
  labels:
    app: retailpulse-grafana
spec:
  selector:
    app: retailpulse-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
