k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-prometheus
  namespace: retailpulse
  labels:
    app: retailpulse-prometheus
spec:
  selector:
    app: retailpulse-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  type: ClusterIP
