k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailpulse-ingress
  namespace: retailpulse
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: retailpulse.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: retailpulse-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retailpulse-dashboard
                port:
                  number: 8501
